# mdsim

./: .envrc  .gitignore  CMakeLists.txt  README.md  config.txt  data.txt  energy.csv  flake.nix  gpu_interface.cu  gpu_interface.h  main.cpp  note.md  plot_energy.py
dumps/: t0.dump  t1.dump  t10.dump  t100.dump  t11.dump  t12.dump  t13.dump  t14.dump  t15.dump  t16.dump  t17.dump  t18.dump  t19.dump  t2.dump  t20.dump  t21.dump  t22.dump  t23.dump  t24.dump  t25.dump  t26.dump  t27.dump  t28.dump  t29.dump  t3.dump  t30.dump  t31.dump  t32.dump  t33.dump  t34.dump  t35.dump  t36.dump  t37.dump  t38.dump  t39.dump  t4.dump  t40.dump  t41.dump  t42.dump  t43.dump  (+61 more)
env/: flake.nix
include/: config.h  gpu_interface.h
scripts/: plot_energy.py  rdf.py
src/: gpu_interface.cu  main.cpp
